bugFix profile img size on mobile

--- a/css/CV.css
+++ b/css/CV.css
@@ -386,7 +386,6 @@ header {
     justify-content: center;
   }
   .whoIAm,
-  #profile-img,
   .information,
   .mapouter {
     width: 100%;
